# AdvDB-FlavorNet

./: .gitignore  00_connect_and_setup.ipynb  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Docs/: todo.md
app/: main.py
app/core/: config.py  db.py  embeddings.py  mongo.py  qdrant.py  sql_loader.py
app/repositories/: recipe_repo.py  user_repo.py
app/routes/: recipes.py  users.py
app/services/: recommendations.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.api.ts  recipes.api.ts  users.api.ts
frontend/src/components/: AuthLayout.tsx  Navbar.tsx  TagInput.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Profile/: Profile.tsx
frontend/src/store/: userStore.ts
frontend/src/utils/: apiClient.ts
mongoDB/: recipe_preprocessing.ipynb
mongoDB/init/: 01_collections.js  02_indexes.js  03_seed_small.jsonl
mongoDB/queries/: find_recipes_by_filters.js  find_recipes_by_ingredient.js
mongoDB/scripts/: rebuild_mongo.sh
sql/init/: 01_schema.sql  02_constraints.sql  03_seed_data.sql  04_views.sql
sql/queries/: get_user_stats.sql  insert_user.sql  insert_user_prefs.sql  recipe_metadata.sql  select_user_prefs.sql  select_users.sql  update_prefs.sql
sql/scripts/: rebuild_db.sh
vectorDB/BERTartifact/: topic_info.csv  topic_terms.json
vectorDB/BERTopic/: BERTopic.py  topics_overview.html  vis_barchart.html  vis_hierarchy.html  vis_topics_map.html  viz_topics_overview.py
vectorDB/data/: generate_embeddings.py  query_test.py
