[project]
name = "FlavorNet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "neo4j>=6.0.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    "qdrant-client>=1.15.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.5.2",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
]
