[project]
name = "FlavorNet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets<3.0.0",
    "dotenv>=0.9.9",
    "fsspec>=2025.9.0",
    "huggingface-hub>=1.0.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "neo4j>=6.0.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
]
