[project]
name = "FlavorNet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic<0.16",
    "datasets<3.0.0",
    "dotenv>=0.9.9",
    "fsspec>=2025.9.0",
    "huggingface-hub==0.23.2",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "neo4j>=6.0.2",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "plotly>=5.20",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.5.2",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "qdrant-client>=1.10.0",
    "sentence-transformers==2.7.0",
    "torch>=2.4",
    "tqdm>=4.67.1",
    "transformers==4.40.2",
]
